--- a/petstore-api-pipeline.yaml
+++ b/petstore-api-pipeline.yaml
@@ -191,8 +191,8 @@ Resources:
           Fn::Sub: ${AWS::StackName}-petstore-api-stack-codebuild-project
       Environment:
         Type: LINUX_CONTAINER
-        ComputeType: BUILD_GENERAL2_SMALL
-        Image: aws/codebuild/nodejs:16
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/standard:4.0
       Source:
         Location: !Join
         - ''
