--- a/03codebuild/postman-newman-buildspec.yml
+++ b/03codebuild/postman-newman-buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - npm install -g newman
       - yum install -y jq
       - newman -v
+      - npm fund
 
   pre_build:
     commands:
@@ -23,6 +24,7 @@ phases:
   build:
     commands:
       - echo Build started on `date` from dir `pwd`
+      - ls -lasht
       - newman run PetStoreAPI.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json -r junit
 
 reports:
