--- a/03codebuild/postman-newman-buildspec.yml
+++ b/03codebuild/postman-newman-buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - npm install -g newman
       - yum install -y jq
       - newman -v
+      - postman -v
       - npm fund
 
   pre_build:
