--- a/01api/petstore-api-buildspec.yml
+++ b/01api/petstore-api-buildspec.yml
@@ -7,6 +7,7 @@ phases:
                                    --s3-bucket resource-petapi
                                    --s3-prefix api-code
                                    --output-template-file petstore-api-output.yaml
+      - cat petstore-api-output.yaml
 artifacts:
   #type: zip
   files:
