--- a/03codebuild/postman-newman-buildspec.yml
+++ b/03codebuild/postman-newman-buildspec.yml
@@ -29,6 +29,12 @@ phases:
       - newman run seccol.postman_collection.json
       - newman run PetStoreAPI.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json
       - newman run PetStoreAPI.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json -r junit
+      - ls -lasht
+      - cd 02postman/newman
+      - ls -lasht
+      - aws s3 cp -r 02postman/newman "s3://${S3_BUCKET}/Reports"
+      - cat SurefireReports
+      
 
 reports:
   JUnitReports: # CodeBuild will create a report group called "SurefireReports".
