--- a/03codebuild/postman-newman-buildspec.yml
+++ b/03codebuild/postman-newman-buildspec.yml
@@ -34,7 +34,7 @@ phases:
       - ls -lasht
       - cd newman
       - ls -lasht
-      - aws s3 cp --recursive . "s3://${S3_BUCKET}/${CODEBUILD_BUILD_NUMBER}/"
+      - aws s3 cp --recursive . "s3://${S3_BUCKET}/reports/${CODEBUILD_BUILD_NUMBER}/"
  
       
 
